# observer

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
grafana/dashboards/: observer.json
grafana/provisioning/dashboards/: observer.yml
monitor/: admin.py  aggregator.py  api.py  collector.py  config.py  gpu.py  main.py  metrics.py  process.py  storage.py
prometheus/: prometheus.yml
tests/: test_aggregator.py  test_api.py  test_collector.py  test_gpu.py  test_process.py  test_storage.py
