[project]
name = "observer"
version = "0.1.0"
description = "Per-user CPU/RAM/GPU monitor → Prometheus → Grafana"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=5.9",
    "prometheus-client>=0.20",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
observer = "monitor.main:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",       # required by FastAPI TestClient
    "pytest-asyncio>=0.23",
]
